--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 				<!-- LOOP OVER THE TODOS IN $scope.todos -->
 				<div class="checkbox" ng-repeat="todo in todos">
 					<label>
-						<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
+						<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }} <button type="submit" class="btn btn-primary btn-lg" ng-click="EditTodo(todo._id)">Edit</button>
 					</label>
 				</div>
 
